--- a/src/components/styled/_colors.scss
+++ b/src/components/styled/_colors.scss
@@ -7,10 +7,11 @@ $secondary_color_button: #4273f6;
 $modal-background-color: rgba(0,0,0,.5);
 $main-background-color: #f4f4ff;
 $button-background-color: #3d3d3d;
+$left-panel-background-color: #f7f9ff;
 
 $grey-50: #F3F6F9;
-$grey-100: #E5EAF2;
-$grey-200: #DAE2ED;
+$grey-100: rgba(238, 238, 245, 0.75);
+$grey-200: #e1e1e1;
 $grey-300: #C7D0DD;
 $grey-400: #B0B8C4;
 $grey-500: #9DA8B7;
